--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     environment:
       - DB_CONNECT=${DB_CONNECT} # Kết nối tới MongoDB service
       - PORT=${PORT}
+      - DOKER_PORT=${DOKER_PORT}
     ports:
       - "${PORT}:${DOKER_PORT}"
     depends_on:
