--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.7"
 
 services:
-  # Dịch vụ Nginx (Reverse Proxy)
   nginx:
     image: nginx:latest
     container_name: nginx-container
@@ -10,28 +9,36 @@ services:
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - app # Đảm bảo Nginx chỉ khởi động khi ứng dụng Node.js đã sẵn sàng
+      - app
+    networks:
+      - mynetwork
 
-  # Dịch vụ Node.js (Express Application)
   app:
     image: express-authen/node:v1
     container_name: node-app
     environment:
-      - DB_CONNECT=mongodb://mongo:27017/mydatabase # Kết nối đến MongoDB container
-      - PORT=3005 # Cổng mà Node.js ứng dụng sẽ lắng nghe
-      - DOKER_PORT=3005 # Cổng container sẽ expose
+      - DB_CONNECT=mongodb://mongo:27017/mydatabase
+      - PORT=3005
+      - DOKER_PORT=3005
     ports:
-      - "3005:3005" # Ánh xạ cổng từ container ra máy chủ
+      - "3005:3005"
     depends_on:
-      - mongo # Đảm bảo MongoDB được khởi động trước khi app chạy
+      - mongo
+    networks:
+      - mynetwork
 
-  # Dịch vụ MongoDB
   mongo:
     image: mongo:latest
     container_name: mongo-container
     volumes:
-      - mongo-data:/data/db # Volume để lưu trữ dữ liệu của MongoDB
+      - mongo-data:/data/db
+    networks:
+      - mynetwork
 
 volumes:
   mongo-data:
-    driver: local # Đảm bảo volume có thể được lưu trữ và chia sẻ giữa các container
+    driver: local
+
+networks:
+  mynetwork:
+    driver: bridge
